--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+<link rel="icon" href="/favicon.png" type="image/png">
 <meta charset="UTF-8">
 
-<title>Онлайн калькулятор букмекерских вилок — расчет прибыли</title>
-<meta name="description" content="Онлайн калькулятор букмекерских вилок (бк вилки). Автоматический расчет ставок и прибыли для ставок на спорт. Бесплатно.">
+<!-- SEO -->
+<title>Калькулятор букмекерских вилок – ставки на спорт, бк вилки</title>
+<meta name="description" content="Онлайн-калькулятор букмекерских вилок. Рассчитай прибыль по ставкам на спорт, бк вилки и оптимизируй свои ставки быстро и просто.">
+<meta name="keywords" content="букмекерские вилки, бк вилки, ставки на спорт, калькулятор вилок, онлайн ставки">
 
+<!-- Адаптивность -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Стили остаются -->
 <style>
 * { box-sizing: border-box; }
 
@@ -111,6 +116,7 @@ input {
 }
 </style>
 </head>
+
 
 <body>
 
