--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Калькулятор вилок: расчет ставок по коэффициентам, распределение прибыли, ROI и сумма ставок. Быстро, удобно, без регистрации." />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   <link rel="canonical" href="https://calc-vilok.ru/" />
-  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="icon" href="/logo.png" type="image/png">
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph -->
